# Researchers-Validation-Center

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
Arabic Documentation/: 01_BRD_Business_Requirements.md  02_SRS_Software_Specifications.md  03_WUCS_Workflows_UseCases.md  04_SDD_System_Architecture.md
DOC/: 02_SRS_Software_Specifications.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  sessions.py  upload.py
backend/app/models/: __init__.py  chunk.py  discipline.py  session.py  user.py
backend/app/schemas/: chunk.py  session.py
backend/app/services/: chunker.py  file_parser.py  storage.py
backend/app/tasks/: celery_app.py  chunking.py  cleanup.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_auth.py  test_cleanup.py
backend/tests/fixtures/: sample.md  sample.txt
docs/adham-ai/plans/: 2026-06-16-naqqad-phase1-foundation.md  2026-06-22-naqqad-mvp-plan3-frontend-rtl-ar.md  (+5 more)
docs/prds/: MASTER-PRD.md  prd-high-naqqad-ar.md
prds/: prd-high-naqqad.md
specs/001-naqqad-phase1-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+5 files in other folders)
